# arg_dispatch

./: README.md  pyproject.toml
arg_dispatch/: __init__.py  _arg_dispatch.py  _registry.py
tests/: test_arg_dispatch.py
