[tool.poetry]
name = "arg_dispatch"
version = "0.1.3"

description = "function can be dispatched by its arguments"
readme = "README.md"
license = "GPL-3.0"

repository = "https://github.com/zen-xu/arg_dispatch"
authors = ["zen-xu <zen-xu@outlook.com>"]

keywords = [
    "dispatch",
]

classifiers = [
    'Intended Audience :: Developers',
    'Operating System :: OS Independent',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
flake8 = "^3.7"
ipython = "^7.6"
isort = "^4.3"
black = {version = "^18.3-alpha.0", allows-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
